# _dump

./: LICENSE  README.md
i13711/: CMakeLists.txt  README
i13711/demo/: CMakeLists.txt  CombGenerator.cpp  CombGenerator.h
i13711/src/: CMakeLists.txt  sf.cpp  sf.def  sf.rc
i137271/: ideas.txt
i13824/: Main.cpp  MiniPlayer.cpp  MiniPlayer.h  cdbg.hpp  i13824.sln  i13824.vcxproj  i13824.vcxproj.filters
i13824/include/: IGraphRebuildDelegate.h  IKeyFrameInfo.h  ITrackInfo.h  LAVAudioSettings.h  LAVSplitterSettings.h  LAVVideoSettings.h  README.txt
i13824/lav/: CHANGELOG.txt  LAVAudio.ax  LAVFilters.Dependencies.manifest  LAVSplitter.ax  LAVVideo.ax  README.txt
i13824/lav64/: LAVAudio.ax  LAVSplitter.ax  LAVVideo.ax
i1383/: IRelay.h  Main.cpp  i1383.sln  i1383.vcxproj  i1383.vcxproj.filters
i1383/Debug/: CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  i1383.ilk  i1383.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  vc110.idb
i1385/: CMakeLists.txt  Main.cpp
i1385/src/: CMakeLists.txt  Main.cpp
